Added a couple new pages

--- a/Templates/rawhtml/Project2/blog-post.html
+++ b/Templates/rawhtml/Project2/blog-post.html
@@ -1,13 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Get Minecraft</title>
-			<meta charset="UTF-8">
-			<link rel="stylesheet" href="css/home_style.css">
-	</head>	
-	<body>
+<head>
+    <meta charset="UTF-8">
+    <title>Make New Blog Post</title>
+    <link rel="stylesheet" href="css/home_style.css">
+</head>
+<body>
 <!-- Banner at Head of Webpage -->
-		<div class = "header">Blog Posts</div>
+		<div class = "header">Get Minecraft</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
 			<a href="homepage.html">Home</a>
@@ -19,28 +19,7 @@
 		</div>
 <!-- Main Body of Page -->
 		<div class = "main">
-			<div class = "list-blog-posts">
-				<table class="table is-striped is-fullwidth">
-	       			<!-- {% for movie_key, movie in movies %} -->
-	        		<tr>
-	          			<td>
-				            <!-- {% if current_user.is_admin %} -->
-				            <label class="checkbox">
-				              <input type="checkbox" name="movie_keys" /> <!--value="{{ movie_key }}" -->
-				            </label>
-				            <!-- {% endif %} -->
-				            <!--<a href="{{ url_for('movie_page', movie_key=movie_key) }}">
-				              {{ movie.title }}
-				              {% if movie.year %} ({{ movie.year }}) {% endif %}
-				            </a> -->
-				        </td>
-	       			</tr>
-	        <!-- {% endfor %} -->
-	    		</table>
-	    	</div>
-	    	<div id = "make-blog-post">
-
-	    	</div>
+			
 		</div>
 <!-- Footer -->
 		<div class = "footer">
