What I have done as of 2:45pm

--- a/Templates/rawhtml/Project2/blog-posts.html
+++ b/Templates/rawhtml/Project2/blog-posts.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Get Minecraft</title>
 			<meta charset="UTF-8">
-			<link rel="stylesheet" href="css/home_style.css">
+			<link rel="stylesheet" href="css/global.css">
 	</head>	
 	<body>
 <!-- Banner at Head of Webpage -->
@@ -13,7 +13,7 @@
 			<a href="homepage.html">Home</a>
 			<a href="get-minecraft.html">Get Minecraft</a>
 			<a href="blog-posts.html">Blog Posts</a>
-			<a href="world-seed.html">World Seeds</a>
+			<a href="world-seeds.html">World Seeds</a>
 			<a href="build-ideas.html">Build Ideas</a>
 			<a href="admin-login.html">Login</a>
 		</div>
