--- a/Templates/rawhtml/Project2/new-blog-post.html
+++ b/Templates/rawhtml/Project2/new-blog-post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Make New Blog Post</title>
-    <link rel="stylesheet" href="css/home_style.css">
+    <link rel="stylesheet" href="css/global.css">
 </head>
 <body>
 <!-- Banner at Head of Webpage -->
@@ -13,7 +13,7 @@
 			<a href="homepage.html">Home</a>
 			<a href="get-minecraft.html">Get Minecraft</a>
 			<a href="blog-posts.html">Blog Posts</a>
-			<a href="world-seed.html">World Seeds</a>
+			<a href="world-seeds.html">World Seeds</a>
 			<a href="build-ideas.html">Build Ideas</a>
 			<a href="admin-login.html">Login</a>
 		</div>
@@ -24,7 +24,7 @@
                 <h3>Title</h3>
                 <input type="text">
                 <h3>Begin your post here</h3>
-                <textarea cols="100%"></textarea>
+                <textarea cols="100"></textarea>
                 <input type="submit">
             </form>
 		</div>
