--- a/Templates/rawhtml/Project2/new-world-seed.html
+++ b/Templates/rawhtml/Project2/new-world-seed.html
@@ -19,7 +19,27 @@
 		</div>
 <!-- Main Body of Page -->
 		<div class = "main">
-
+			<h2>New World Seed</h2>
+            <form>
+                <h3>Seed Number</h3>
+                <input type="text">
+                <h3>Description</h3>
+                <input type="text">
+                <h3>Tags</h3>
+                <input type="checkbox" name="tag1" id="tag1" value="Village">
+                <label for="tag1">Village</label><br>
+                <input type="checkbox" name="tag2" id="tag2" value="Village">
+                <label for="tag2">Mountains</label><br>
+                <input type="checkbox" name="tag3" id="tag3" value="Village">
+                <label for="tag3">Flat Land</label><br>
+                <input type="checkbox" name="tag4" id="tag4" value="Village">
+                <label for="tag4">Lava</label><br>
+                <input type="checkbox" name="tag5" id="tag5" value="Village">
+                <label for="tag5">Diamonds</label><br>
+                <input type="checkbox" name="tag6" id="tag6" value="Village">
+                <label for="tag6">Mineshaft</label><br>
+                <input type="submit">
+            </form>
 		</div>
 <!-- Footer -->
 		<div class = "footer">
