--- a/Templates/rawhtml/Project2/world-seed.html
+++ b/Templates/rawhtml/Project2/world-seed.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Make New Blog Post</title>
-    <link rel="stylesheet" href="css/global.css">
-</head>
-<body>
+	<head>
+		<title>Home</title>
+			<meta charset="UTF-8">
+			<link rel="stylesheet" href="css/global.css">
+	</head>
+	<body>
 <!-- Banner at Head of Webpage -->
-		<div class = "header">Get Minecraft</div>
+		<div class = "header">All you need to know about Minecraft</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
 			<a href="homepage.html">Home</a>
