--- a/Templates/rawhtml/Project2/homepage.html
+++ b/Templates/rawhtml/Project2/homepage.html
@@ -4,6 +4,7 @@
 		<title>Home</title>
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/home_style.css">
+			<link rel="stylesheet" href="css/global.css">
 	</head>	
 	<body>
 <!-- Banner at Head of Webpage -->
@@ -13,7 +14,7 @@
 			<a href="homepage.html">Home</a>
 			<a href="get-minecraft.html">Get Minecraft</a>
 			<a href="blog-posts.html">Blog Posts</a>
-			<a href="world-seed.html">World Seeds</a>
+			<a href="world-seeds.html">World Seeds</a>
 			<a href="build-ideas.html">Build Ideas</a>
 			<a href="admin-login.html">Login</a>
 		</div>
@@ -26,11 +27,11 @@
 				</div>
 				<div id = "get-mc-button-np">
 					<p>Join the Minecraft community today!</p>
-					<form>
+
 			<!-- Make a javacript for this for the onclick using: document.getElementById("link-get-mc").onclick = function () {
         location.href = "get-minecraft.html"; };-->
 						<a href="get-minecraft.html"><input type="button" value = "Get Minecraft" id = "link-get-mc"></a>					
-					</form>
+
 				</div>
 			</div>
 
