--- a/Templates/rawhtml/Project2/world-seeds.html
+++ b/Templates/rawhtml/Project2/world-seeds.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Make New Blog Post</title>
-    <link rel="stylesheet" href="css/global.css">
-</head>
-<body>
+	<head>
+		<title>Home</title>
+			<meta charset="UTF-8">
+			<link rel="stylesheet" href="css/global.css">
+	</head>
+	<body>
 <!-- Banner at Head of Webpage -->
-		<div class = "header">Get Minecraft</div>
+		<div class = "header">All you need to know about Minecraft</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
 			<a href="homepage.html">Home</a>
@@ -19,7 +19,28 @@
 		</div>
 <!-- Main Body of Page -->
 		<div class = "main">
+            <div class = "list-world-seeds">
+                    <table>
+                        <!-- {% for world_seed_key, seed in worlds %} -->
+                        <tr>
+                            <td>
+                                <!-- {% if current_user.is_admin %} -->
+                                <label class="checkbox">
+                                  <input type="checkbox" name="movie_keys" /> <!--value="{{ movie_key }}" -->
+                                </label>
+                                <!-- {% endif %} -->
+                                <!--<a href="{{ url_for('movie_page', movie_key=movie_key) }}">
+                                  {{ movie.title }}
+                                  {% if movie.year %} ({{ movie.year }}) {% endif %}
+                                </a> -->
+                            </td>
+                        </tr>
+                <!-- {% endfor %} -->
+                    </table>
+            </div>
+            <div id = "create-world-seed">
 
+            </div>
 		</div>
 <!-- Footer -->
 		<div class = "footer">
