What I have as of 8:50pm

--- a/Templates/rawhtml/Project2/blog-post.html
+++ b/Templates/rawhtml/Project2/blog-post.html
@@ -19,7 +19,15 @@
 		</div>
 <!-- Main Body of Page -->
 		<div class = "main">
-
+			<h1>Blog Post Title</h1> <!-- {{ blog.title }} -->
+				<table class="table">
+				  <tr>
+					<td>This is a sample blog post and the contents of the submitted post.
+					In each blog post, there will be a title, and a body paragraph created
+					from the user. Only the admin after logging in will be able to delete
+					blog posts.</td> <!-- {{ movie.year }} -->
+				  </tr>
+				</table>
 		</div>
 <!-- Footer -->
 		<div class = "footer">
