--- a/Templates/rawhtml/Project2/homepage.html
+++ b/Templates/rawhtml/Project2/homepage.html
@@ -20,25 +20,28 @@
 		</div>
 <!-- Main Body of Page -->
 		<div class = "main">
-
 			<div class = "get-mc">
 				<div id = "get-mc-home-img">
-					<!-- Insert Image of Minecraft here -->
+					<img src="images/get-mc1.jpg" alt="Get Minecraft Image" id = "image-home">
 				</div>
 				<div id = "get-mc-button-np">
-					<p>Join the Minecraft community today!</p>
+					<p>Join the Minecraft community today!</p>	<!-- for smaller display, have button on same line -->
+
 
 			<!-- Make a javacript for this for the onclick using: document.getElementById("link-get-mc").onclick = function () {
         location.href = "get-minecraft.html"; };-->
-						<a href="get-minecraft.html"><input type="button" value = "Get Minecraft" id = "link-get-mc"></a>					
-
+ 					<a href="get-minecraft.html"><input type="button" value = "Get Minecraft" id = "link-get-mc"></a>
 				</div>
 			</div>
-
 			<div id = "about-mc">
-					<p>This is some text about minecraft, we will fill this in later but for now this is some placeholder text yada yada yada.</p>
+				<h1>About Minecraft</h1>
+				<p>This is some text about minecraft, we will fill this in later but for now this is some placeholder
+					text yada yada yada. This is some text about minecraft, we will fill this in later but for now this
+					is some placeholder text yada yada yada.This is some text about minecraft, we will fill this in
+					later but for now this is some placeholder text yada yada yada.</p>
 			</div>
 
+			<h1>New Features</h1>
 			<div class = "new-features">
 				<div id = "go-back">
 
