--- a/Templates/rawhtml/Project2/build-ideas.html
+++ b/Templates/rawhtml/Project2/build-ideas.html
@@ -4,6 +4,7 @@
 		<title>Home</title>
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/global.css">
+			<link rel="stylesheet" href="css/build-ideas_style.css">
 	</head>
 	<body>
 <!-- Banner at Head of Webpage -->
@@ -25,10 +26,54 @@
 
                     </div>
                     <div class="card-description">
-
+						Build
                     </div>
                     <div class = "build-feedback-perc">
+						__% like this
+                    </div>
+                </div>
+				<div class = "card">
+                    <div class = "card-image">
 
+                    </div>
+                    <div class="card-description">
+						Build
+                    </div>
+                    <div class = "build-feedback-perc">
+						__% like this
+                    </div>
+                </div>
+				<div class = "card">
+                    <div class = "card-image">
+
+                    </div>
+                    <div class="card-description">
+						Build
+                    </div>
+                    <div class = "build-feedback-perc">
+						__% like this
+                    </div>
+                </div>
+				<div class = "card">
+                    <div class = "card-image">
+
+                    </div>
+                    <div class="card-description">
+						Build
+                    </div>
+                    <div class = "build-feedback-perc">
+						__% like this
+                    </div>
+                </div>
+				<div class = "card">
+                    <div class = "card-image">
+
+                    </div>
+                    <div class="card-description">
+						Build
+                    </div>
+                    <div class = "build-feedback-perc">
+						__% like this
                     </div>
                 </div>
             </div>
