--- a/Templates/rawhtml/Project2/get-minecraft.html
+++ b/Templates/rawhtml/Project2/get-minecraft.html
@@ -4,6 +4,7 @@
 		<title>Get Minecraft</title>
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/global.css">
+			<link rel="stylesheet" href="css/get-mc_style.css">
 	</head>	
 	<body>
 <!-- Banner at Head of Webpage -->
@@ -21,24 +22,61 @@
 		<div class = "main">
 			<div class = "display-download-options">
 				<div class = "option-selection" id = "computer">
-					
+					Computer
 				</div>
 				<div class = "option-selection" id = "mobile">
-
+					Mobile
 				</div>
 				<div class = "option-selection" id = "console">
-
+					Gaming Console
 				</div>
 			</div>
+			<!-- When one of the options is clicked, it will display this section and link using an
+			anchor to go down the webpage for small displays -->
 			<div class = "selection-displayed">
-				<table>
-					<tr>
-						<td>Where to purchase and download:</td>
-					</tr>
-					<tr>
-						<td>Download instructions:</td>
-					</tr>
-				</table>
+				<h2>Where to purchase/download</h2>
+				<p>In this section, we will have where the user can purchase the game or where to download. For example,
+					for mobile devices, the user will be directed to the app store where they can download (free or paid)</p>
+				<ul>
+					<li>Mobile - iOS:
+						<a href = "https://itunes.apple.com/app/minecraft-pocket-edition/id479516143?mt=8">Link</a></li>
+					<li>Mobile - Android:
+						<a href = "https://play.google.com/store/apps/details?id=com.mojang.minecraftpe">Link</a></li>
+					<li>Computer - Mac OS:
+						<a href = "https://checkout.minecraft.net/en-us/store/minecraft/#register">Link</a></li>
+					<li>Computer - Windows:
+						<a href = "https://checkout.minecraft.net/en-us/store/minecraft/#register">Link</a></li>
+					<li>Computer - Linux:
+						<a href = "https://checkout.minecraft.net/en-us/store/minecraft/#register">Link</a></li>
+					<li>Game Console - Nintendo Switch:
+						<a href = "https://www.nintendo.com/games/detail/minecraft-switch/">Link</a></li>
+				</ul>
+
+				<h2>Download Instructions</h2>
+				<ul>
+					<li>Mobile - iOS:
+						<a href = "https://apps.apple.com/us/app/minecraft/id479516143">Link</a></li>
+					<li>Mobile - Android:
+						<a href = "https://play.google.com/store/apps/details?id=com.mojang.minecraftpe&hl=en_US&gl=US">Link</a></li>
+					<li>Computer - Mac OS:
+						<a href = "https://launcher.mojang.com/download/Minecraft.dmg">Link</a></li>
+					<li>Computer - Windows:
+						<a href = "https://www.minecraft.net/download">Link</a></li>
+					<li>Computer - Linux:
+						<a href = "https://www.minecraft.net/download">Link</a></li>
+
+					<li>Game Console - Nintendo Switch:
+						<a href = "https://www.nintendo.com/games/detail/minecraft-switch/">Link</a></li>
+				</ul>
+
+				<h2>Steps to Download:</h2>
+				<ol>
+					<li>Click the above link, according to which device you have</li>
+					<li>Purchase the game if you haven't already</li>
+					<li>Download the game</li>
+					<li>Enjoy!</li>
+				</ol>
+
 			</div>
 		</div>
 <!-- Footer -->
