--- a/Templates/rawhtml/Project2/blog-post.html
+++ b/Templates/rawhtml/Project2/blog-post.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <!-- Banner at Head of Webpage -->
+<div class="stickysticky">
 		<div class = "header">Get Minecraft</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
@@ -17,6 +18,7 @@
 			<a href="build-ideas.html">Build Ideas</a>
 			<a href="admin-login.html">Login</a>
 		</div>
+</div>
 <!-- Main Body of Page -->
 		<div class = "main">
 			<h1>Blog Post Title</h1> <!-- {{ blog.title }} -->
