--- a/Templates/rawhtml/Project2/get-minecraft.html
+++ b/Templates/rawhtml/Project2/get-minecraft.html
@@ -8,6 +8,7 @@
 	</head>	
 	<body>
 <!-- Banner at Head of Webpage -->
+<div class="stickysticky">
 		<div class = "header">Get Minecraft</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
@@ -18,6 +19,7 @@
 			<a href="build-ideas.html">Build Ideas</a>
 			<a href="admin-login.html">Login</a>
 		</div>
+</div>
 <!-- Main Body of Page -->
 		<div class = "main">
 			<div class = "display-download-options">
