--- a/Templates/rawhtml/Project2/css/home_style.css
+++ b/Templates/rawhtml/Project2/css/home_style.css
@@ -43,24 +43,26 @@
 #go-back {
 	height: 4em;
 	width: 4em;
-	border-style: solid;
 	box-sizing: border-box;
 }
 
 #feature-img {
 	height: 13em;
 	width: 20em;
-	border-style: solid;
 	box-sizing: border-box;
 }
 
 #go-next {
 	height: 4em;
 	width: 4em;
-	border-style: solid;
 	box-sizing: border-box;
 }
 
 #about-mc {
 
+}
+
+.arrows, #feature {
+    width: 100%;
+    height: 100%;
 }
