--- a/Templates/rawhtml/Project2/homepage.html
+++ b/Templates/rawhtml/Project2/homepage.html
@@ -46,16 +46,16 @@
 			<h1>New Features</h1>
 			<div class = "new-features">
 				<div id = "go-back">
-
+					<img src="images/back.png" alt="Back" class="arrows" id="back-arrow">
 				</div>
 				<div id = "feature-img">
-
+					<img src="images/new-characters.png" alt="Feature" id = "feature">
 				</div>
 				<div id = "go-next">
-
+					<img src="images/next.png" alt="Next" class="arrows" id="next-arrow">
 				</div>
 			</div>
-			<p id = "-new-feature-title" align="center">Title of Displayed Feature</p>
+			<p id = "-new-feature-title" align="center">New Characters</p>
 		</div>
 <!-- Footer -->
 		<div class = "footer">
