--- a/Templates/rawhtml/Project2/admin-login.html
+++ b/Templates/rawhtml/Project2/admin-login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Make New Blog Post</title>
     <link rel="stylesheet" href="css/global.css">
+	<link rel="stylesheet" href="css/admin.css">
 </head>
 <body>
 <!-- Banner at Head of Webpage -->
@@ -21,7 +22,14 @@
 </div>
 <!-- Main Body of Page -->
 		<div class = "main">
-
+			<form id="login" method="post">
+				<label for="user">Username</label>
+				<input type="text" placeholder="Enter Admin Username" name="user" required>
+				<label for="passw">Password</label>
+				<input type="text" placeholder="Enter Admin Password" name="passw" required>
+				<br>
+				<button type="submit">Login</button>
+			</form>
 		</div>
 <!-- Footer -->
 		<div class = "footer">
