Images for get mc
check it out

--- a/Templates/rawhtml/Project2/get-minecraft.html
+++ b/Templates/rawhtml/Project2/get-minecraft.html
@@ -24,13 +24,13 @@
 		<div class = "main">
 			<div class = "display-download-options">
 				<div class = "option-selection" id = "computer">
-					Computer
+					<img src="images/computer.png" alt="computer">
 				</div>
 				<div class = "option-selection" id = "mobile">
-					Mobile
+					<img src="images/phone.png" alt="Mobile">
 				</div>
 				<div class = "option-selection" id = "console">
-					Gaming Console
+					<img src="images/console.png" alt="Gaming Console">
 				</div>
 			</div>
 			<!-- When one of the options is clicked, it will display this section and link using an
