--- a/Templates/rawhtml/Project2/css/get-mc_style.css
+++ b/Templates/rawhtml/Project2/css/get-mc_style.css
@@ -9,6 +9,17 @@
     height: 200px;
     border-style: solid;
     margin: 10px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+
+.option-selection img {
+        max-width: 100%;
+        max-height: 100%;
+        display: block; /* remove extra space below image */
+        margin-left: auto;
+        margin-right: auto;
 }
 
 .selection-displayed {
