--- a/Templates/rawhtml/Project2/css/global.css
+++ b/Templates/rawhtml/Project2/css/global.css
@@ -96,7 +96,9 @@
 
 /* Small Display */
 @media (min-width: 34em) and (max-width: 49.9375em) {
-
+    .stickysticky {
+        position: static;
+    }
 }
 
 /* Large Display */
