--- a/Templates/rawhtml/Project2/get-minecraft.html
+++ b/Templates/rawhtml/Project2/get-minecraft.html
@@ -41,34 +41,19 @@
 					for mobile devices, the user will be directed to the app store where they can download (free or paid)</p>
 				<ul>
 					<li>Mobile - iOS:
-						<a href = "https://itunes.apple.com/app/minecraft-pocket-edition/id479516143?mt=8">Link</a></li>
+						<a href = "https://itunes.apple.com/app/minecraft-pocket-edition/id479516143?mt=8" target="_blank">Link</a></li>
 					<li>Mobile - Android:
-						<a href = "https://play.google.com/store/apps/details?id=com.mojang.minecraftpe">Link</a></li>
-					<li>Computer - Mac OS:
-						<a href = "https://checkout.minecraft.net/en-us/store/minecraft/#register">Link</a></li>
-					<li>Computer - Windows:
-						<a href = "https://checkout.minecraft.net/en-us/store/minecraft/#register">Link</a></li>
-					<li>Computer - Linux:
-						<a href = "https://checkout.minecraft.net/en-us/store/minecraft/#register">Link</a></li>
+						<a href = "https://play.google.com/store/apps/details?id=com.mojang.minecraftpe" target="_blank">Link</a></li>
+					<li>Computer - Windows/Mac OS/Linux:
+						<a href = "https://www.minecraft.net/en-us/store/minecraft-java-edition" target="_blank">Link</a></li>
+					<li>Computer - Windows 10:
+						<a href = "https://www.minecraft.net/en-us/store/minecraft-windows10" target="_blank">Link</a></li>
 					<li>Game Console - Nintendo Switch:
-						<a href = "https://www.nintendo.com/games/detail/minecraft-switch/">Link</a></li>
-				</ul>
-
-				<h2>Download Instructions</h2>
-				<ul>
-					<li>Mobile - iOS:
-						<a href = "https://apps.apple.com/us/app/minecraft/id479516143">Link</a></li>
-					<li>Mobile - Android:
-						<a href = "https://play.google.com/store/apps/details?id=com.mojang.minecraftpe&hl=en_US&gl=US">Link</a></li>
-					<li>Computer - Mac OS:
-						<a href = "https://launcher.mojang.com/download/Minecraft.dmg">Link</a></li>
-					<li>Computer - Windows:
-						<a href = "https://www.minecraft.net/download">Link</a></li>
-					<li>Computer - Linux:
-						<a href = "https://www.minecraft.net/download">Link</a></li>
-
-					<li>Game Console - Nintendo Switch:
-						<a href = "https://www.nintendo.com/games/detail/minecraft-switch/">Link</a></li>
+						<a href = "https://www.nintendo.com/games/detail/minecraft-switch/" target="_blank">Link</a></li>
+					<li>Game Console - Playstation:
+						<a href = "https://store.playstation.com/en-us/product/UP4433-CUSA00744_00-MINECRAFTPS40001" target="_blank">Link</a></li>
+					<li>Game Console - Xbox:
+						<a href = "https://www.minecraft.net/en-us/store/minecraft-xbox-one" target="_blank">Link</a></li>
 				</ul>
 
 				<h2>Steps to Download:</h2>
