Form Stuff and whatever else
Changed some of how things lookin rn and did stuff with forms. Big thing is I added a form to submit a build idea and that will just go to our email

--- a/Templates/rawhtml/Project2/buildideaform.html
+++ b/Templates/rawhtml/Project2/buildideaform.html
@@ -1,14 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Seed</title>
-			<meta charset="UTF-8">
-			<link rel="stylesheet" href="css/global.css">
-	</head>
-	<body>
+<head>
+    <meta charset="UTF-8">
+    <title>Make New Blog Post</title>
+    <link rel="stylesheet" href="css/global.css">
+</head>
+<body>
 <!-- Banner at Head of Webpage -->
 <div class="stickysticky">
-		<div class = "header">All you need to know about Minecraft</div>
+		<div class = "header">Get Minecraft</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
 			<a href="homepage.html">Home</a>
@@ -21,7 +21,16 @@
 </div>
 <!-- Main Body of Page -->
 		<div class = "main">
+			<h2>What's Your Idea?</h2>
+            <form>
+                <h3>Title of build</h3>
+                <input type="text" required>
+                <h3>Give a description or link to photo of a build</h3>
+                <textarea cols="100" rows="4"></textarea><br>
 
+                <input type="submit">
+                <h2>We will check this out! ###NOTE: this will be hidden unless submitted once javascript is implemented, and form will be posted to our email</h2>
+            </form>
 		</div>
 <!-- Footer -->
 		<div class = "footer">
