--- a/Templates/rawhtml/Project2/css/admin.css
+++ b/Templates/rawhtml/Project2/css/admin.css
@@ -1,5 +1,9 @@
 #login label, input, button{
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
+}
+
+#login input {
+    width: 15em;
 }
 
 #login label{
