--- a/Templates/rawhtml/Project2/new-world-seed.html
+++ b/Templates/rawhtml/Project2/new-world-seed.html
@@ -24,9 +24,9 @@
 			<h2>New World Seed</h2>
             <form>
                 <h3>Description</h3>
-                <input type="text">
+                <input type="text" required>
                 <h3>Seed Number</h3>
-                <input type="text">
+                <input type="text" required>
                 <h3>Tags</h3>
                 <input type="checkbox" name="tag1" id="tag1" value="Village">
                 <label for="tag1">Village</label><br>
