--- a/Templates/rawhtml/Project2/world-seeds.html
+++ b/Templates/rawhtml/Project2/world-seeds.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Home</title>
+		<title>World Seeds</title>
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/global.css">
 	</head>
