--- a/Templates/rawhtml/Project2/admin-login.html
+++ b/Templates/rawhtml/Project2/admin-login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Make New Blog Post</title>
+    <title>Admin Login</title>
     <link rel="stylesheet" href="css/global.css">
 	<link rel="stylesheet" href="css/admin.css">
 </head>
