--- a/Templates/rawhtml/Project2/blog-posts.html
+++ b/Templates/rawhtml/Project2/blog-posts.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Get Minecraft</title>
+		<title>Blog Posts</title>
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/global.css">
 	</head>	
