--- a/Templates/rawhtml/Project2/build-ideas.html
+++ b/Templates/rawhtml/Project2/build-ideas.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Home</title>
+		<title>Build Ideas</title>
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/global.css">
 			<link rel="stylesheet" href="css/build-ideas_style.css">
@@ -79,6 +79,11 @@
                     </div>
                 </div>
             </div>
+
+			<div id="haveidea">
+				<h2>Have a build idea? <a href="buildideaform.html">Tell us.</a></h2>
+
+			</div>
 
 		</div>
 <!-- Footer -->
