--- a/Templates/rawhtml/Project2/build-ideas.html
+++ b/Templates/rawhtml/Project2/build-ideas.html
@@ -5,6 +5,7 @@
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/global.css">
 			<link rel="stylesheet" href="css/build-ideas_style.css">
+			<link rel="icon" href="favicon.ico">
 	</head>
 	<body>
 <!-- Banner at Head of Webpage -->
