--- a/Templates/rawhtml/Project2/homepage.html
+++ b/Templates/rawhtml/Project2/homepage.html
@@ -5,6 +5,7 @@
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/home_style.css">
 			<link rel="stylesheet" href="css/global.css">
+			<link rel="icon" href="favicon.ico">
 	</head>	
 	<body>
 	<div class="stickysticky">
