--- a/Templates/rawhtml/Project2/world-seeds.html
+++ b/Templates/rawhtml/Project2/world-seeds.html
@@ -4,6 +4,7 @@
 		<title>World Seeds</title>
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/global.css">
+			<link rel="icon" href="favicon.ico">
 	</head>
 	<body>
 <!-- Banner at Head of Webpage -->
