Get Minecraft Changes
Edited a bit so it will be easier to figure out the javascript for it once we get there. And elaborated on the javascript plans a little

--- a/Templates/rawhtml/Project2/get-minecraft.html
+++ b/Templates/rawhtml/Project2/get-minecraft.html
@@ -39,16 +39,23 @@
 			<div class = "selection-displayed">
 				<h2>Where to purchase/download</h2>
 				<p>In this section, we will have where the user can purchase the game or where to download. For example,
-					for mobile devices, the user will be directed to the app store where they can download (free or paid)</p>
-				<ul>
+					for mobile devices, the user will be directed to the app store where they can download (free or paid). Javascript will allow
+					hiding and showing content based on ID dependent on which icon is clicked.</p>
+				<ul id="moblist">
 					<li>Mobile - iOS:
 						<a href = "https://itunes.apple.com/app/minecraft-pocket-edition/id479516143?mt=8" target="_blank">Link</a></li>
 					<li>Mobile - Android:
 						<a href = "https://play.google.com/store/apps/details?id=com.mojang.minecraftpe" target="_blank">Link</a></li>
+				</ul>
+
+				<ul id="comlist">
 					<li>Computer - Windows/Mac OS/Linux:
 						<a href = "https://www.minecraft.net/en-us/store/minecraft-java-edition" target="_blank">Link</a></li>
 					<li>Computer - Windows 10:
 						<a href = "https://www.minecraft.net/en-us/store/minecraft-windows10" target="_blank">Link</a></li>
+				</ul>
+
+				<ul id="conlist">
 					<li>Game Console - Nintendo Switch:
 						<a href = "https://www.nintendo.com/games/detail/minecraft-switch/" target="_blank">Link</a></li>
 					<li>Game Console - Playstation:
