--- a/Templates/rawhtml/Project2/css/get-mc_style.css
+++ b/Templates/rawhtml/Project2/css/get-mc_style.css
@@ -13,7 +13,7 @@
     align-items: center;
 }
 
-.option-selection img {
+.option-selection > img {
         max-width: 100%;
         max-height: 100%;
         display: block; /* remove extra space below image */
