--- a/Templates/rawhtml/Project2/homepage.html
+++ b/Templates/rawhtml/Project2/homepage.html
@@ -44,20 +44,22 @@
 					later but for now this is some placeholder text yada yada yada.</p>
 			</div>
 
-			<h1>New Features</h1>
 			<div class = "new-features">
-				<div id = "go-back">
-					<img src="images/back.png" alt="Back" class="arrows" id="back-arrow">
-				</div>
-				<div id = "feature-img">
-					<img src="images/new-characters.png" alt="Feature" id = "feature">
-				</div>
-				<div id = "go-next">
-					<img src="images/next.png" alt="Next" class="arrows" id="next-arrow">
+				<h1>New Features</h1>
+				<div id="scroller">
+					<div id = "go-back">
+						<img src="images/back.png" alt="Back" class="arrows" id="back-arrow">
+					</div>
+					<div id = "feature-img">
+						<img src="images/new-characters.png" alt="Feature" id = "feature">
+					</div>
+					<div id = "go-next">
+						<img src="images/next.png" alt="Next" class="arrows" id="next-arrow">
+					</div>
 				</div>
 			</div>
-			<p id = "-new-feature-title" align="center">New Characters</p>
 		</div>
+				<p id = "-new-feature-title" align="center">New Characters</p>
 <!-- Footer -->
 		<div class = "footer">
 			<div class = "footer-contact-info">
