--- a/Templates/rawhtml/Project2/new-blog-post.html
+++ b/Templates/rawhtml/Project2/new-blog-post.html
@@ -24,10 +24,10 @@
 		<div class = "main">
 			<h2>New Blog Post</h2>
             <form>
-                <h3>Title</h3>
-                <input type="text">
+                <h3>Title</h3><br>
+                <input type="text" style="width: 75%;"><br><br>
                 <h3>Begin your post here</h3>
-                <textarea cols="100"></textarea>
+                <textarea rows="20" style="width: 75%;"></textarea><br><br>
                 <input type="submit">
             </form>
 		</div>
