--- a/Templates/rawhtml/Project2/css/build-ideas_style.css
+++ b/Templates/rawhtml/Project2/css/build-ideas_style.css
@@ -1,6 +1,7 @@
 .cards-container {
     display:flex;
     flex-direction: row;
+    flex-wrap: wrap;
     /* border-style: solid; */
     justify-content: center;
 }
@@ -10,7 +11,7 @@
     width: 200px;
     height: 300px;
     box-sizing: border-box;
-    margin: 0 5px;
+    margin: 5px;
     display: flex;
     flex-direction: column;
     border-radius: 5px;
@@ -40,4 +41,18 @@
     /* border-style: solid; */
     text-align: right;
     padding-right: 5px;
+}
+
+@media (max-width: 49.9375em) {
+    .card {
+       width: 300px;
+       height: 400px;
+    }
+}
+
+@media (max-width: 40em) {
+    .card {
+       width: 400px;
+       height: 500px;
+    }
 }
