--- a/Templates/rawhtml/Project2/css/build-ideas_style.css
+++ b/Templates/rawhtml/Project2/css/build-ideas_style.css
@@ -43,6 +43,17 @@
     padding-right: 5px;
 }
 
+#haveidea {
+    margin-top: 2%;
+}
+
+#haveidea a {
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: green;
+    padding: 2px;
+}
+
 @media (max-width: 49.9375em) {
     .card {
        width: 300px;
