--- a/Templates/rawhtml/Project2/admin-login.html
+++ b/Templates/rawhtml/Project2/admin-login.html
@@ -5,6 +5,7 @@
     <title>Admin Login</title>
     <link rel="stylesheet" href="css/global.css">
 	<link rel="stylesheet" href="css/admin.css">
+	<link rel="icon" href="images/favicon.ico">
 </head>
 <body>
 <!-- Banner at Head of Webpage -->
