--- a/Templates/rawhtml/Project2/blog-posts.html
+++ b/Templates/rawhtml/Project2/blog-posts.html
@@ -4,7 +4,7 @@
 		<title>Blog Posts</title>
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/global.css">
-			<link rel="icon" href="favicon.ico">
+			<link rel="icon" href="images/favicon.ico">
 	</head>	
 	<body>
 <!-- Banner at Head of Webpage -->
