--- a/Templates/rawhtml/Project2/buildideaform.html
+++ b/Templates/rawhtml/Project2/buildideaform.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Make New Blog Post</title>
     <link rel="stylesheet" href="css/global.css">
-	<link rel="icon" href="favicon.ico">
+	<link rel="icon" href="images/favicon.ico">
 </head>
 <body>
 <!-- Banner at Head of Webpage -->
