--- a/Templates/rawhtml/Project2/get-minecraft.html
+++ b/Templates/rawhtml/Project2/get-minecraft.html
@@ -5,7 +5,7 @@
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/global.css">
 			<link rel="stylesheet" href="css/get-mc_style.css">
-			<link rel="icon" href="favicon.ico">
+			<link rel="icon" href="images/favicon.ico">
 	</head>	
 	<body>
 <!-- Banner at Head of Webpage -->
