--- a/Templates/rawhtml/Project2/css/global.css
+++ b/Templates/rawhtml/Project2/css/global.css
@@ -37,6 +37,7 @@
 .main {
 	margin: 0;
 	padding: 10px;
+	min-height: 100%;
 }
 
 /* ------------------------------------------------------------------------ */
@@ -50,10 +51,12 @@
 	flex-direction: row;
 	background-color: #404040;
 
+    position: absolute;
+    right: 0;
     bottom: 0;
-
-    padding-top: 1em;
+    left: 0;
 }
+
 
 .footer-contact-info {
 	box-sizing: border-box;
@@ -116,11 +119,25 @@
 
 /* ------------------------------------------------------------------------ */
 
+html{
+    height: 100%;
+     box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
 body {
-	margin: 0;
-	background-color: #006600;
+    position: relative;
+    margin: 0;
+    min-height: 100%;
+    background-color: #006600;
+    padding-bottom: 7rem;
 }
+
 
 a {
 	text-decoration: none;
