--- a/Templates/rawhtml/Project2/css/get-mc_style.css
+++ b/Templates/rawhtml/Project2/css/get-mc_style.css
@@ -14,20 +14,36 @@
 }
 
 .option-selection > img {
-        max-width: 100%;
-        max-height: 100%;
-        display: block; /* remove extra space below image */
-        margin-left: auto;
-        margin-right: auto;
+    max-width: 100%;
+    max-height: 100%;
+    display: block; /* remove extra space below image */
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .selection-displayed {
     margin-top: 10px;
+    display: flex;
+    flex-direction: row;
 }
+
+.purchase-where, .download-where {
+    width: 50%;
+}
+
+/* ------------------------------------------------------------------------ */
 
 @media screen and (max-width: 700px) {          /* was not working in global css */
     .display-download-options {
         flex-direction: column;
         align-items: center;
 	}
+
+	.selection-displayed {
+        flex-direction: column;
+    }
+
+    .purchase-where, .download-where {
+        width: 100%;
+    }
 }
