I think I have everything till build ideas done

--- a/Templates/rawhtml/Project2/blog-post.html
+++ b/Templates/rawhtml/Project2/blog-post.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Make New Blog Post</title>
     <link rel="stylesheet" href="css/global.css">
+	<link rel="stylesheet" href="css/blog-post.css">
 	<link rel="icon" href="images/favicon.ico">
 </head>
 <body>
@@ -23,14 +24,11 @@
 <!-- Main Body of Page -->
 		<div class = "main">
 			<h1>Blog Post Title</h1> <!-- {{ blog.title }} -->
-				<table class="table">
-				  <tr>
-					<td>This is a sample blog post and the contents of the submitted post.
-					In each blog post, there will be a title, and a body paragraph created
-					from the user. Only the admin after logging in will be able to delete
-					blog posts.</td> <!-- {{ movie.year }} -->
-				  </tr>
-				</table>
+			<p>This is a sample blog post and the contents of the submitted post. In each blog post,
+				there will be a title, and a body paragraph created from the user.
+				Only the admin after logging in will be able to delete blog posts from the main blog post page.</p>
+			<a href="blog-posts.html"><center><input type="button" value = "All Posts" id = "all-posts"></center></a>
+			<br><br>
 		</div>
 <!-- Footer -->
 		<div class = "footer">
