--- a/Templates/rawhtml/Project2/new-blog-post.html
+++ b/Templates/rawhtml/Project2/new-blog-post.html
@@ -9,7 +9,7 @@
 <body>
 <!-- Banner at Head of Webpage -->
 <div class="stickysticky">
-		<div class = "header">Get Minecraft</div>
+		<div class = "header">New Blog Post</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
 			<a href="homepage.html">Home</a>
@@ -22,13 +22,15 @@
 </div>
 <!-- Main Body of Page -->
 		<div class = "main">
-			<h2>New Blog Post</h2>
             <form>
-                <h3>Title</h3><br>
-                <input type="text" style="width: 75%;"><br><br>
-                <h3>Begin your post here</h3>
-                <textarea rows="20" style="width: 75%;"></textarea><br><br>
-                <input type="submit">
+                <h2>Title</h2>
+                <input type="text" style="width: 100%;"><br><br>
+                <h2>Begin your post here</h2>
+                <textarea rows="20" style="width: 100%;"></textarea><br><br>
+			<!-- This <a> is just to link to the blog post example -->
+
+				<input type="submit">
+				<br><a href="blog-post.html">link to post</a>
             </form>
 		</div>
 <!-- Footer -->
