--- a/Templates/rawhtml/Project2/world-seed.html
+++ b/Templates/rawhtml/Project2/world-seed.html
@@ -4,6 +4,7 @@
 		<title>Seed</title>
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/global.css">
+
 			<link rel="icon" href="images/favicon.ico">
 	</head>
 	<body>
@@ -22,7 +23,11 @@
 </div>
 <!-- Main Body of Page -->
 		<div class = "main">
-
+			<h1>Seed #: 2084759484</h1> <!-- {{ blog.title }} -->
+			<p><b>Tags:</b> tag1, tag2, tag3</p>
+			<p>This would be where the seed description displays.</p>
+			<a href="world-seeds.html"><center><input type="button" value = "All Seeds" id = "all-seeds"></center></a>
+			<br><br>
 		</div>
 <!-- Footer -->
 		<div class = "footer">
