--- a/Templates/rawhtml/Project2/world-seeds.html
+++ b/Templates/rawhtml/Project2/world-seeds.html
@@ -7,6 +7,7 @@
 			<link rel="icon" href="images/favicon.ico">
 	</head>
 	<body>
+	<a name="to-get-mc-top"></a>
 <!-- Banner at Head of Webpage -->
 <div class="stickysticky">
 		<div class = "header">All you need to know about Minecraft</div>
@@ -23,7 +24,7 @@
 <!-- Main Body of Page -->
 		<div class = "main">
 			<div id = "create-world-seed">
-				<a href="new-world-seed.html"><input type="button" value = "Add a World Seed" id = "new-seed"></a>
+				<a href="new-world-seed.html"><center><input type="button" value = "Add a World Seed" id = "new-seed"></center></a>
             </div>
             <div class = "list-world-seeds">
                     <table class="listings">
@@ -32,7 +33,7 @@
 	          			<td>
 				            <!-- {% if current_user.is_admin %} -->
 				            <label class="checkbox">
-				              <input type="checkbox" name="movie_keys" /> <!--value="{{ movie_key }}" -->
+				              <input type="checkbox" class = "check-box-input" name="seed-desc" /> <!--value="{{ movie_key }}" -->
 				            </label>
 				            <!-- {% endif %} -->
 				            <!--<a href="{{ url_for('movie_page', movie_key=movie_key) }}">
@@ -48,7 +49,7 @@
 	          			<td>
 				            <!-- {% if current_user.is_admin %} -->
 				            <label class="checkbox">
-				              <input type="checkbox" name="movie_keys" /> <!--value="{{ movie_key }}" -->
+				              <input type="checkbox" class = "check-box-input" name="seed-desc" /> <!--value="{{ movie_key }}" -->
 				            </label>
 				            <!-- {% endif %} -->
 				            <!--<a href="{{ url_for('movie_page', movie_key=movie_key) }}">
@@ -62,7 +63,7 @@
 	          			<td>
 				            <!-- {% if current_user.is_admin %} -->
 				            <label class="checkbox">
-				              <input type="checkbox" name="movie_keys" /> <!--value="{{ movie_key }}" -->
+				              <input type="checkbox" class = "check-box-input" name="seed-desc" /> <!--value="{{ movie_key }}" -->
 				            </label>
 				            <!-- {% endif %} -->
 				            <!--<a href="{{ url_for('movie_page', movie_key=movie_key) }}">
@@ -74,6 +75,7 @@
 	       			</tr>
 	    		</table>
             </div>
+			<a href="#to-get-mc-top"><h3 class="to-top">Back to Top</h3></a>
 		</div>
 <!-- Footer -->
 		<div class = "footer">
