--- a/Templates/rawhtml/Project2/blog-posts.html
+++ b/Templates/rawhtml/Project2/blog-posts.html
@@ -4,9 +4,11 @@
 		<title>Blog Posts</title>
 			<meta charset="UTF-8">
 			<link rel="stylesheet" href="css/global.css">
+			<link rel="stylesheet" href="css/blog-posts-hub_style.css">
 			<link rel="icon" href="images/favicon.ico">
 	</head>	
 	<body>
+	<a name="to-get-mc-top"></a>
 <!-- Banner at Head of Webpage -->
 <div class="stickysticky">
 		<div class = "header">Blog Posts</div>
@@ -23,7 +25,7 @@
 <!-- Main Body of Page -->
 		<div class = "main">
 			<div id = "make-blog-post">
-				<a href="new-blog-post.html"><input type="button" value = "Create a Post" id = "new-post"></a>
+				<a href="new-blog-post.html"><center><input type="button" value = "Create a Post" id = "new-post"></center></a>
 	    	</div>
 			<div class = "list-blog-posts">
 				<table class="listings">
@@ -32,14 +34,15 @@
 	          			<td>
 				            <!-- {% if current_user.is_admin %} -->
 				            <label class="checkbox">
-				              <input type="checkbox" name="movie_keys" /> <!--value="{{ movie_key }}" -->
+				              <input type="checkbox" class = "check-box-input" name="blog-title" /> <!--value="{{ movie_key }}" -->
 				            </label>
 				            <!-- {% endif %} -->
 				            <!--<a href="{{ url_for('movie_page', movie_key=movie_key) }}">
 				              {{ movie.title }}
 				              {% if movie.year %} ({{ movie.year }}) {% endif %}
 				            </a> -->
-							<label>Title of Post (placeholder 1)</label>
+				<!-- This is an example linking to the 'blog post' -->
+							<label><a href="blog-post.html">Title of Post (placeholder 1)</a></label>
 				        </td>
 	       			</tr>
 	        <!-- {% endfor %} --> <!-- Here would be the end of the table for the add from .... just copy and pasting for styling -->
@@ -48,7 +51,7 @@
 	          			<td>
 				            <!-- {% if current_user.is_admin %} -->
 				            <label class="checkbox">
-				              <input type="checkbox" name="movie_keys" /> <!--value="{{ movie_key }}" -->
+				              <input type="checkbox" class = "check-box-input" name="blog-title" /> <!--value="{{ movie_key }}" -->
 				            </label>
 				            <!-- {% endif %} -->
 				            <!--<a href="{{ url_for('movie_page', movie_key=movie_key) }}">
@@ -62,7 +65,7 @@
 	          			<td>
 				            <!-- {% if current_user.is_admin %} -->
 				            <label class="checkbox">
-				              <input type="checkbox" name="movie_keys" /> <!--value="{{ movie_key }}" -->
+				              <input type="checkbox" class = "check-box-input" name="blog-title" /> <!--value="{{ movie_key }}" -->
 				            </label>
 				            <!-- {% endif %} -->
 				            <!--<a href="{{ url_for('movie_page', movie_key=movie_key) }}">
@@ -74,6 +77,7 @@
 	       			</tr>
 	    		</table>
 	    	</div>
+			<a href="#to-get-mc-top"><h3 class="to-top">Back to Top</h3></a>
 		</div>
 <!-- Footer -->
 		<div class = "footer">
