--- a/Templates/rawhtml/Project2/css/global.css
+++ b/Templates/rawhtml/Project2/css/global.css
@@ -43,6 +43,11 @@
 	min-height: 100%;
 }
 
+.check-box-input {
+    width: 20px;
+    height: 20px;
+}
+
 /* ------------------------------------------------------------------------ */
 
 .footer {
@@ -147,10 +152,10 @@ a {
 	color: black;
 }
 
-p, li, input {
+p, li, input, label {
     margin-top: 0;
     font-family: Didot;
-    font-size: 1.2em;
+    font-size: 1.45em;
 }
 
 h1, h2, h3 {
@@ -161,6 +166,23 @@ h1, h2, h3 {
 
 ul {
 	list-style: circle;
+}
+
+ol {
+    margin-top: 0;
+}
+
+table {
+    width: 100%;
+    margin: 10px 0;
+}
+
+td {
+    font-size: 1.75em;
+}
+
+td:hover {
+    background-color: #00802b;
 }
 
 /* ------------------------------------------------------------------------ */
