--- a/Templates/rawhtml/Project2/new-world-seed.html
+++ b/Templates/rawhtml/Project2/new-world-seed.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Make New Blog Post</title>
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/new-seed.css">
     <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
 <!-- Banner at Head of Webpage -->
 <div class="stickysticky">
-		<div class = "header">Get Minecraft</div>
+		<div class = "header">Create World Seed</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
 			<a href="homepage.html">Home</a>
@@ -22,26 +23,37 @@
 </div>
 <!-- Main Body of Page -->
 		<div class = "main">
-			<h2>New World Seed</h2>
             <form>
-                <h3>Description</h3>
-                <input type="text" required>
-                <h3>Seed Number</h3>
-                <input type="text" required>
-                <h3>Tags</h3>
-                <input type="checkbox" name="tag1" id="tag1" value="Village">
-                <label for="tag1">Village</label><br>
-                <input type="checkbox" name="tag2" id="tag2" value="Village">
-                <label for="tag2">Mountains</label><br>
-                <input type="checkbox" name="tag3" id="tag3" value="Village">
-                <label for="tag3">Flat Land</label><br>
-                <input type="checkbox" name="tag4" id="tag4" value="Village">
-                <label for="tag4">Lava</label><br>
-                <input type="checkbox" name="tag5" id="tag5" value="Village">
-                <label for="tag5">Diamonds</label><br>
-                <input type="checkbox" name="tag6" id="tag6" value="Village">
-                <label for="tag6">Mineshaft</label><br>
+                <h2>Description</h2>
+                <input type="text" id = "seed-desc" required>
+                <br><br>
+                <h2>Seed Number</h2>
+                <input type="text" id = "seed-num" required>
+                <br><br>
+                <h2>Tags</h2>
+
+                <div class = "tag-container">
+                    <div class = "tag-col">
+                        <input type="checkbox" class = "check-box-input" name="tag1" id="tag1" value="Village">
+                        <label for="tag1">Village</label><br>
+                        <input type="checkbox" class = "check-box-input" name="tag2" id="tag2" value="Village">
+                        <label for="tag2">Mountains</label><br>
+                        <input type="checkbox" class = "check-box-input" name="tag3" id="tag3" value="Village">
+                        <label for="tag3">Flat Land</label><br>
+                    </div>
+                    <div class = "tag-col">
+                        <input type="checkbox" class = "check-box-input" name="tag4" id="tag4" value="Village">
+                        <label for="tag4">Lava</label><br>
+                        <input type="checkbox" class = "check-box-input" name="tag5" id="tag5" value="Village">
+                        <label for="tag5">Diamonds</label><br>
+                        <input type="checkbox" class = "check-box-input" name="tag6" id="tag6" value="Village">
+                        <label for="tag6">Mineshaft</label><br>
+                    </div>
+                </div>
+
                 <input type="submit">
+                <br><a href="world-seed.html">link to seed</a>
+                <br><br>
             </form>
 		</div>
 <!-- Footer -->
