What I have as of 6pm
I fixed some title names, banner displays, and centered the login to be in middle of page

--- a/Templates/rawhtml/Project2/blog-post.html
+++ b/Templates/rawhtml/Project2/blog-post.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Make New Blog Post</title>
+    <title>Blog Post</title>
     <link rel="stylesheet" href="css/global.css">
 	<link rel="stylesheet" href="css/blog-post.css">
 	<link rel="icon" href="images/favicon.ico">
@@ -10,7 +10,7 @@
 <body>
 <!-- Banner at Head of Webpage -->
 <div class="stickysticky">
-		<div class = "header">Get Minecraft</div>
+		<div class = "header">Blog Post</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
 			<a href="homepage.html">Home</a>
