--- a/Templates/rawhtml/Project2/buildideaform.html
+++ b/Templates/rawhtml/Project2/buildideaform.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Make New Blog Post</title>
+    <title>Suggest a Build</title>
     <link rel="stylesheet" href="css/global.css">
 	<link rel="icon" href="images/favicon.ico">
 </head>
 <body>
 <!-- Banner at Head of Webpage -->
 <div class="stickysticky">
-		<div class = "header">Get Minecraft</div>
+		<div class = "header">Build Suggestion</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
 			<a href="homepage.html">Home</a>
