--- a/Templates/rawhtml/Project2/new-world-seed.html
+++ b/Templates/rawhtml/Project2/new-world-seed.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Make New Blog Post</title>
+    <title>Create a Seed</title>
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/new-seed.css">
     <link rel="icon" href="images/favicon.ico">
