--- a/Templates/rawhtml/Project2/world-seed.html
+++ b/Templates/rawhtml/Project2/world-seed.html
@@ -10,7 +10,7 @@
 	<body>
 <!-- Banner at Head of Webpage -->
 <div class="stickysticky">
-		<div class = "header">All you need to know about Minecraft</div>
+		<div class = "header">World Seed</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
 			<a href="homepage.html">Home</a>
