--- a/Templates/rawhtml/Project2/admin-login.html
+++ b/Templates/rawhtml/Project2/admin-login.html
@@ -10,7 +10,7 @@
 <body>
 <!-- Banner at Head of Webpage -->
 <div class="stickysticky">
-		<div class = "header">Get Minecraft</div>
+		<div class = "header">Login</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
 			<a href="homepage.html">Home</a>
@@ -23,14 +23,16 @@
 </div>
 <!-- Main Body of Page -->
 		<div class = "main">
+			<div class = "login-container">
 			<form id="login" method="post">
 				<label for="user">Username</label>
-				<input type="text" placeholder="Enter Admin Username" name="user" required>
+				<input type="text" placeholder="Enter Admin Username" name="user" id ="user" required>
 				<label for="passw">Password</label>
-				<input type="text" placeholder="Enter Admin Password" name="passw" required>
+				<input type="text" placeholder="Enter Admin Password" name="passw" id ="passw" required>
 				<br>
-				<button type="submit">Login</button>
+				<center><button type="submit" id = "login-button">Login</button></center>
 			</form>
+			</div>
 		</div>
 <!-- Footer -->
 		<div class = "footer">
